--- a/Index2.html
+++ b/Index2.html
@@ -19,6 +19,11 @@
     <Section class="props"></Section>
     <Section class="props"></Section>
     <Section class="props"></Section>
+    <Section class="props"></Section>
+    <Section class="props"></Section>
+    <Section class="props"></Section>
+    <Section class="props"></Section>
+    <Section class="props"></Section>
 
     
 </body>
